<resources>
    <string name="app_name">Notes App</string>
    <string name="add_button">Add Button</string>
    <string name="add_note">Add Note</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="form_empty">Form Empty</string>
    <string name="please_fill_the_data">Please fill the data</string>
    <string name="status">Status</string>
    <string name="notes_app">Notes App</string>
    <string name="detail">Detail</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="notes_is_empty">Notes is Empty</string>
    <string name="kotak">kotak</string>
</resources>